--- a/client/src/components/teacher/Teacher.css
+++ b/client/src/components/teacher/Teacher.css
@@ -1,11 +1,37 @@
 img{
-    height: 150;
-    width: 150;
+    height: 80px;
+    width: 100%;
 }
 
-Button{
+button{
     height: 100%;
-    width: 100%;
     padding: 0;
     justify-content: center;
+}
+
+button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    display: inline-block;
+}
+
+button{
+    border-radius: 100%;
+    border-width: 4px;
+    border-color: rgb(37, 191, 88);
+    overflow: hidden;
+    background-color: rgb(255, 255, 255); /* Light green background color */
+    margin: 10px;
+    transition: transform 0.3s; /* Smooth transition effect */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Optional: Add a subtle shadow effect */
+}
+
+button:hover {
+    transform: scale(1.1); /* Make the image slightly bigger on hover */
+}
+
+button img {
+    width: 100%;
+    height: auto;
 }
