token and button to teacher

--- a/client/src/components/teacher/Teacher.css
+++ b/client/src/components/teacher/Teacher.css
@@ -15,7 +15,9 @@ button {
     justify-content: center;
     display: inline-block;
 }
-
+.logOut{
+    width: 300px;
+}
 button{
     border-radius: 100%;
     border-width: 4px;
