--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -998,6 +998,36 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.flag {
+    background: url(https://primefaces.org/cdn/primereact/images/flag/flags_responsive.png) no-repeat;
+    background-size: 100%;
+    vertical-align: middle;
+}
+
+.flag-ad {
+    background-position: 0 0.413223%;
+}
+
+.flag-ae {
+    background-position: 0 0.826446%;
+}
+
+/* Add more flag classes as needed */
+
+html {
+    font-size: 14px;
+}
+
+body {
+    font-family: "Inter var", sans-serif;;
+    font-weight: normal;
+    background: var(--surface-ground);
+    color: var(--text-color);
+    padding: 1rem;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 .card {
     background: var(--surface-card);
     padding: 2rem;
@@ -1008,11 +1038,81 @@ body {
 nav {
     position: fixed;
     z-index: 100;
+    width: 100%;
+    top: 0;
 }
 
 .logo {
+    height: 65px;
+    width: 100%;
+}
+.homePageImgCard{
+    display: flex;
+    background: var(--surface-card);
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    box-sizing: border-box;
 
-    height: auto;
-    width:100px;
+}
+.homePageImg {
+    height: 60%;
+    width: 60%;
+}
 
+img {
+    height: 65px;
+    width: 100%;
+}
+
+.p-menubar {
+    background-color: #fffcf5;
+}
+
+.p-menuitem-text {
+    font-size: 20px;
+}
+
+.p-menuitem-link:hover {
+    background-color: #fcdca3;
+    border-radius: 6px;
+}
+.card_footer{
+   
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+.footer {
+    display: grid;
+    text-align: center;
+    grid-template-columns: auto auto;
+    box-sizing: border-box;
+    background-color: #ffebee;
+    padding: 0.5rem;
+    color: #4b5563;
+    border: 1px solid #e5e7eb;
+    border-radius: 6px;
+    font-family: "Inter var", sans-serif;;
+    text-align: center;
+    font-size: 20px;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased;
+}
+
+.pHomePage{
+    align-content: center;
+    font-size: 25px;
+    font-weight: 600;
+    padding: 20px;
+    color: #5b8ad5;
+    font-family:FreeMono, monospace;
+}
+.pBold{
+    color: #27892f;
 }
