--- a/client/src/components/teacher/Teacher.css
+++ b/client/src/components/teacher/Teacher.css
@@ -37,3 +37,9 @@ button img {
     width: 100px;
     height: auto;
 }
+.childrenList{
+    background: var(--surface-card);
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
