--- a/client/src/components/teacher/Teacher.css
+++ b/client/src/components/teacher/Teacher.css
@@ -95,18 +95,27 @@ button img {
 }
 
 .image-circle img {
-    width: 100%; /* Fill the circular shape with the image */
-    height: auto; /* Maintain image aspect ratio */
-    border:solid 2.5px #6ba2fc;
-    border-radius: 50%; /* Create a circular shape */
-    /* border-width: 55px; */
-    
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+    margin: 10px;
 }
 
 .white-bg {
-    background-color: #FFFFFF; /* White background */
+    background-color: #FFFFFF;
+    width: 80%;
+    border-radius: 10px;
 }
 
 .red-bg {
-    background-color: #59abf8; /* Red background */
+    background-color: #59abf8; 
+    width: 80%;
+    border-radius: 10px;
+}
+.allClass{
+   
+}
+.css-wb57ya-MuiFormControl-root-MuiTextField-root {
+    margin: 0 30px 0 30px;
+    width: 80%;
 }
