--- a/client/src/components/class/class.css
+++ b/client/src/components/class/class.css
@@ -16,15 +16,23 @@
     display: flex;
 }
 
+
 .teacher {
     flex: 1;
     display: flex;
     flex-flow: column;
     background-color: #e1eeff;
     border-radius: 10px;
-    width: 100px;
+    width: 400px;
+    height: 75vh;
     margin: 20px;
+    margin-bottom: 50px;
+    flex-basis: 250px;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
+
+
 
 
 .class {
