--- a/client/src/components/chatMessage/SendMessages.css
+++ b/client/src/components/chatMessage/SendMessages.css
@@ -1,4 +1,4 @@
-.imageButtom{
+.imageButtom {
     background-size: cover;
     background-repeat: no-repeat;
     height: 40px;
@@ -7,27 +7,39 @@
     border-radius: 50%;
     margin: 10px;
 }
-.sleep{
+
+.sleep {
     background-image: url(/public/img/sleep.png);
-   
+
 }
-.food{
+
+.food {
     background-image: url(/public/img/food.png);
-    
+
 }
-.diaper{
+
+.diaper {
     background-image: url(/public/img/diaper.png);
-   
+
 }
-.sendMessage{
+
+.sendMessage {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    bottom: 0;
+    position: fixed;
+    width: 80%;
+    z-index: 999;
+    margin-bottom: 8vh;
+    margin-right: 10%;
 }
-.iconBottle{
-    width:  50px;
-    height:  100%;
+
+.iconBottle {
+    width: 50px;
+    height: 100%;
 }
-.css-70qvj9{
+
+.css-70qvj9 {
     margin: 20px;
 }
