--- a/client/src/components/class/class.css
+++ b/client/src/components/class/class.css
@@ -21,15 +21,16 @@
     flex: 1;
     display: flex;
     flex-flow: column;
-    background-color: #e1eeff;
+    background-color: #cfe3ff6b;
     border-radius: 10px;
     width: 400px;
     height: 75vh;
-    margin: 20px;
+    margin-right: 20px;
     margin-bottom: 50px;
     flex-basis: 250px;
     flex-grow: 0;
     flex-shrink: 0;
+    border: 1px solid #e5e7eb;
 }
 
 
