--- a/client/src/components/chatMessage/ChatMessage.css
+++ b/client/src/components/chatMessage/ChatMessage.css
@@ -1,2 +1,20 @@
-
-  
+.sender-msg{
+    background-color: #d9e6fb70;
+    border-radius: 50px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+  .user-msg{
+    background-color: #6ba2fc8a;
+    border-radius: 50px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-around;
+  }
+  .sendername{
+    margin: 10px;
+  }
+  .createData{
+    margin: 10px;
+  }
