--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -1053,6 +1053,7 @@ nav {
     border-radius: 10px;
     margin-bottom: 1rem;
     box-sizing: border-box;
+    margin-top: 130px;
 
 }
 .homePageImg {
