--- a/client/src/components/parent/Parent.css
+++ b/client/src/components/parent/Parent.css
@@ -21,7 +21,7 @@ button {
 
 
 button:hover {
-    transform: scale(1.1); /* Make the image slightly bigger on hover */
+    transform: scale(1.1); 
 }
 
 button img {
@@ -37,7 +37,7 @@ button img {
 
 
 .children-container {
-   
+   margin-top: 150px;
 }
 
 .child-row {
@@ -102,4 +102,8 @@ button img {
 .css-wb57ya-MuiFormControl-root-MuiTextField-root {
     margin: 0 30px 0 30px;
     width: 80%;
+}
+.child-row:hover {
+    background-color:#98b2caf0; /* Change the background color on hover */
+    color: white; /* Change the text color on hover */
 }
